--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node src/app.ts",
-    "build": "tsc",
-    "start": "node dist/app.js"
-  },
+  "test": "echo \"Error: no test specified\" && exit 1",
+  "dev": "ts-node src/app.ts",
+  "build": "tsc",
+  "start": "npm run build && node dist/app.js"
+},
+
   "keywords": [],
   "author": "",
   "license": "ISC",
